# hackathonproject

./: .gitignore
backend/: realestate_agent.db  requirements.txt
backend/src/realestate_agent/: api.py  main.py  realestate_agent.db  realestate_agent.db-shm  realestate_agent.db-wal
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EmailComposer.tsx  TravelCalculator.tsx
frontend/src/pages/: Index.tsx  SignIn.tsx  SignUp.tsx
frontend/src/services/: auth.ts  travelTimeService.ts
realestate_agent/: main.py  pyproject.toml
realestate_agent/src/realestate_agent/: __init__.py  api.py  main.py  realestate_agent.db  scraper.py
